@@ -3,11 +3,5 @@ Add missing functions to Stat, mentioned in its man-page
 Add info to the stat manpage indicating what fields of the stat struct are
 returned by the specific members (in particular: device related)
 
-Remove exceptions thrown from:
-
-user/user.cc
-xpointer/xpointer.cc
-
-
 --
 
