@@ -1,3 +1,7 @@
-#!/bin/sh
+#!/bin/bash
 
-g++ -o driver driver.cc -lX11 -lbobcat
+CMD="g++ -o driver -Wall -I../../tmp driver.cc -lX11 -L../../tmp/lib -lbobcat -s"
+# CMD="g++ -o driver -Wall driver.cc -lX11 -lbobcat -s"
+
+echo $CMD
+$CMD
