@@ -13,6 +13,8 @@ namespace FBB
         public:
             Xpointer();
             ~Xpointer();
+
+            void verify() const;
     
             bool set(int x, int y) const;
             bool get(int *x, int *y) const;
