@@ -6,8 +6,6 @@ Xpointer::Xpointer()
         return;         // One more object
 
     s_theDisplay = XOpenDisplay(0);
-    if (!s_theDisplay)
-        throw Errno() << insertable << "Can't open the display" << throwable;
 }
     
     
